# hacks

2048-ai/: README.md  engine.py  engine_test.py  play.py  policy_gradients.py  strats.py
2048-engine/: Cargo.toml  README.md
2048-engine/src/: array.rs  engine.rs  main.rs
compute-pi/: Cargo.toml  README.md
compute-pi/src/: main.rs
timing-data/: .gitignore  Cargo.toml
timing-data/data/: directory.json
timing-data/data/aewm/: schedule.txt  school.txt
timing-data/data/blach/: schedule.txt  school.txt
timing-data/data/coronadohs1/: school.txt
timing-data/data/coronadohs2/: schedule.txt  school.txt
timing-data/data/dhs/: schedule.txt  school.txt
timing-data/data/fosterhs/: schedule.txt  school.txt
timing-data/data/lahs/: schedule.txt  school.txt
timing-data/data/lemanmiddle/: schedule.txt  school.txt
timing-data/data/mchs/: schedule.txt  school.txt
timing-data/data/montavista/: schedule.txt  school.txt
timing-data/data/mvhs/: schedule.txt  school.txt  school_new.txt
timing-data/data/nchs/: schedule.txt  school.txt
timing-data/data/nwhs/: schedule.txt  school.txt
timing-data/data/paly/: schedule.txt  school.txt
timing-data/data/pblhs/: school.txt
timing-data/data/schs/: schedule.txt  school.txt
timing-data/data/smhs/: schedule.txt  school.txt
timing-data/data/uhs/: schedule.txt  school.txt
timing-data/data/yshs/: schedule.txt  school.txt
timing-data/src/: dead.rs  main.rs  parser.rs  serialize.rs  tokenizer.rs  transformer.rs  utils.rs  validator.rs
timing-data/testdata/: schedule.txt  schedule_tokens.json
